--- a/ui/export.html
+++ b/ui/export.html
@@ -47,6 +47,13 @@
         <option value="both">both（两者）</option>
       </select>
     </div>
+    <div class="row">
+      <label for="format">导出格式</label>
+      <select id="format">
+        <option value="xlsx">XLSX（默认）</option>
+        <option value="csv">CSV</option>
+      </select>
+    </div>
 
     <div class="actions">
       <button id="btnSync">立即导出（同步）</button>
@@ -80,12 +87,13 @@
       const OrderID = document.getElementById('order').value.trim()
       const uasID = document.getElementById('uas').value.trim()
       const target = document.getElementById('target').value
+      const format = document.getElementById('format') ? document.getElementById('format').value : 'xlsx'
       // convert datetime-local to ISO (UTC)
       const startIso = start ? new Date(start).toISOString() : ''
       // 如果用户没有填写结束时间，使用当前时间
       const endIso = end ? new Date(end).toISOString() : new Date().toISOString()
       const endProvided = !!end
-      return { startIso, endIso, OrderID, uasID, target, endProvided }
+      return { startIso, endIso, OrderID, uasID, target, format, endProvided }
     }
 
     // 同步导出（直接下载）
@@ -96,7 +104,7 @@
       if(!endProvided){ appendLog('未填写结束时间，已自动使用当前时间: ' + endIso) }
       appendLog('开始同步导出...')
       try{
-        const body = { startTime: startIso, endTime: endIso, OrderID, uasID, target }
+  const body = { startTime: startIso, endTime: endIso, OrderID, uasID, target, format }
         const resp = await fetch('/record/export', { method: 'POST', headers: {'Content-Type':'application/json'}, body: JSON.stringify(body) })
         if(!resp.ok){
           const text = await resp.text()
@@ -125,12 +133,12 @@
     // 异步导出（创建任务并轮询）
     btnAsync.addEventListener('click', async ()=>{
       // 异步导出：允许不填写结束时间，前端会用当前时间作为结束时间
-      const { startIso, endIso, OrderID, uasID, target, endProvided } = readForm()
+      const { startIso, endIso, OrderID, uasID, target, format, endProvided } = readForm()
       if(!startIso){ alert('请填写开始时间'); return }
       if(!endProvided){ appendLog('未填写结束时间，已自动使用当前时间: ' + endIso) }
       appendLog('创建异步导出任务...')
       try{
-        const body = { startTime: startIso, endTime: endIso, OrderID, uasID, target }
+        const body = { startTime: startIso, endTime: endIso, OrderID, uasID, target, format }
         const resp = await fetch('/record/exportAsync', { method: 'POST', headers: {'Content-Type':'application/json'}, body: JSON.stringify(body) })
         const data = await resp.json()
         if(!resp.ok){ appendLog('创建任务失败: ' + (data.error||JSON.stringify(data))); return }
