新增 - 实现数据写入自动重试+本地持久队列；计算每段海拔变化的绝对值之和，与水平距离相加，得出实际飞行中的移动距离。

--- a/ui/export.html
+++ b/ui/export.html
@@ -21,7 +21,7 @@
 <body>
   <div class="card">
     <h2>导出飞行数据</h2>
-    <p class="notice">选择时间范围、可选 OrderID 或 uasID，选择导出类型后可同步导出（立即下载）或异步导出（后台生成并返回下载链接）。</p>
+    <p class="notice">选择时间范围、可选 OrderID 或 uasID，选择导出类型后可后台生成并返回下载链接。</p>
 
     <div class="row">
       <label for="start">开始时间</label>
